sand-macros/tests/cases/fail_function_spaces.stderr
error: invalid resource path in #[function(...)]: path must only contain [a-z0-9_./-] in `foo bar`
 --> tests/cases/fail_function_spaces.rs:3:12
  |
3 | #[function("foo bar")]
  |            ^^^^^^^^^
