sand-macros/tests/cases/fail_function_spaces.rs
use sand_macros::function;

#[function("foo bar")]
fn bad() {}

fn main() {}
